Fix styling of post list on small browser screens

--- a/apps/better_reddit/priv/static/css/app.css
+++ b/apps/better_reddit/priv/static/css/app.css
@@ -122,8 +122,7 @@ a:visited {
 
 .s-grid {
     display: flex;
-    margin-top: 24px;
-    margin-left: 24px;
+    margin: 24px;
     flex-flow: row wrap;
     align-items: flex-start;
 }
@@ -136,10 +135,13 @@ a:visited {
     width: calc(25vw - 37px);
     min-height: calc((25vw - 37px) * (2/3));
     background: white;
-    margin-right: 24px;
     margin-bottom: 24px;
     box-shadow: 0 2px 2px rgba(0,0,0,.25);
     border-radius: 2px;
+}
+
+.s-card:nth-child(odd) {
+    margin-right: 24px;
 }
 
 .s-card.is-actionable {
